# space-invaders

./: .gitignore  CMakeLists.txt  main.c
resources/: fragment.glsl  fragment_no_texture.glsl  pixel_fragment.glsl  pixel_vertex.glsl  static_vertex.glsl
